2014-03-18 Deng Pang <DengPang@rst.ricoh.com>
	db/source/printer/Ricoh-AficioSG3110DN.xml
        db/source/printer/Ricoh-AficioSG3110DNw.xml
	Fixed PXL PPD path in xml files.

2014-03-14 Deng Pang <DengPang@rst.ricoh.com>
      * db/source/PPD/Gestetner/PS/Gestetner-DSc1020_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-DSc1020_PXL.ppd,
        db/source/printer/Gestetner-DSc1020.xml,
        db/source/PPD/Gestetner/PS/Gestetner-DSc1025_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-DSc1025_PXL.ppd,
        db/source/printer/Gestetner-DSc1025.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C2003_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C2003_PXL.ppd,
        db/source/printer/Gestetner-MP_C2003.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C2503_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C2503_PXL.ppd,
        db/source/printer/Gestetner-MP_C2503.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_C2003_PS.ppd,
        db/source/PPD/Lanier/PXL/Lanier-MP_C2003_PXL.ppd,
        db/source/printer/Lanier-MP_C2003.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_C2503_PS.ppd,
        db/source/PPD/Lanier/PXL/Lanier-MP_C2503_PXL.ppd,
        db/source/printer/Lanier-MP_C2503.xml,
        db/source/PPD/NRG/PS/NRG-MP_C2003_PS.ppd,
        db/source/PPD/NRG/PXL/NRG-MP_C2003_PXL.ppd,
        db/source/printer/NRG-MP_C2003.xml,
        db/source/PPD/NRG/PS/NRG-MP_C2003Z_PS.ppd,
        db/source/PPD/NRG/PXL/NRG-MP_C2003Z_PXL.ppd,
        db/source/printer/NRG-MP_C2003Z.xml,
        db/source/PPD/NRG/PS/NRG-MP_C2503_PS.ppd,
        db/source/PPD/NRG/PXL/NRG-MP_C2503_PXL.ppd,
        db/source/printer/NRG-MP_C2503.xml,
        db/source/PPD/NRG/PS/NRG-MP_C2503Z_PS.ppd,
        db/source/PPD/NRG/PXL/NRG-MP_C2503Z_PXL.ppd,
        db/source/printer/NRG-MP_C2503Z.xml,
        db/source/PPD/Ricoh/PS/Ricoh-MP_C2003_PS.ppd,
        db/source/PPD/Ricoh/PXL/Ricoh-MP_C2003_PXL.ppd,
        db/source/printer/Ricoh-MP_C2003.xml,