@@ -6,7 +6,7 @@
 *% intend to imply approval and acceptance by
 *% Adobe Systems, Inc.
 *% =========================================
-*% PPD for Samsung M337x 387x 407x Series PS
+*% PPD for Samsung M332x 382x 402x Series PS
 *% For Linux
 *% =========================================
 *%
@@ -39,13 +39,13 @@
 *FormatVersion: "4.3"
 *LanguageEncoding: ISOLatin1
 *LanguageVersion: English
-*PCFileName: "M337x.ppd"
-*Product: "(Samsung M337x 387x 407x Series)"
+*PCFileName: "M332x.ppd"
+*Product: "(Samsung M332x 382x 402x Series)"
 *Manufacturer:  "Samsung"
 *PSVersion: "(3011    ) 0"
-*ModelName: "Samsung M337x 387x 407x Series"
-*ShortNickName: "M337x"
-*NickName: "Samsung M337x 387x 407x Series PS"
+*ModelName: "Samsung M332x 382x 402x Series"
+*ShortNickName: "M332x"
+*NickName: "Samsung M332x 382x 402x Series PS"
 *LanguageLevel: "3"
 *Protocols: PJL TBCP
 *FreeVM: "6700000"
