@@ -1,6 +1,6 @@
-<printer id="printer/Samsung-M337x_387x_407x">
+<printer id="printer/Samsung-M332x_382x_402x">
   <make>Samsung</make>
-  <model>M337x 387x 407x</model>
+  <model>M332x 382x 402x</model>
   <mechanism>
     <laser />
     <!--not "color"-->
@@ -17,9 +17,9 @@
   </lang>
   <autodetect>
     <general>
-      <ieee1284>MFG:Samsung;CMD:SPL,PCL6,POSTSCRIPT,PDF,TIFF,JPG,FAX,FWV,PIC,DCU,EXT;MDL:M337x 387x 407x Series;CLS:PRINTER;CID:SA_PCL6_BW;MODE:FAX3,SCN,GVPMFP;</ieee1284>
+      <ieee1284>MFG:Samsung;CMD:SPL,PCL6,PS3,FWV,PIC,EXT,DCU;MDL:M332x 382x 402x Series;CLS:PRINTER;CID:SA_PCL6_BW;</ieee1284>
       <manufacturer>Samsung</manufacturer>
-      <model>M337x 387x 407x Series</model>
+      <model>M332x 382x 402x Series</model>
     </general>
   </autodetect>
   <functionality>A</functionality>
@@ -30,7 +30,7 @@
     </driver>
     <driver>
       <id>Postscript-Samsung</id>
-      <ppd>PPD/Samsung/PS/Samsung_M337x_387x_407x_Series.ppd</ppd>
+      <ppd>PPD/Samsung/PS/Samsung_M332x_382x_402x_Series.ppd</ppd>
     </driver>
   </drivers>
   <comments>
