@@ -1,3 +1,12 @@
+2014-03-31 Andrey Makhalkin <a.makhalkin@samsung.com>
+      * db/source/PPD/Samsung/PS/Samsung_M332x_382x_402x_Series.ppd,
+        db/source/printer/Samsung-M332x_382x_402x.xml:
+	Added a new model - Samsung M332x 382x 402x
+
+      * db/source/PPD/Samsung/PS/Samsung_M337x_387x_407x_Series.ppd,
+        db/source/printer/Samsung-M337x_387x_407x.xml:
+	Corrected PPD defaults and DEVICE ID string
+
 2014-03-18 Deng Pang <DengPang@rst.ricoh.com>
 	db/source/printer/Ricoh-AficioSG3110DN.xml
         db/source/printer/Ricoh-AficioSG3110DNw.xml
